--- a/docs/document/LEVEL 2 INTERMEDIATE/Fase 7.75 Data Validation & Error Handling/7.11 Input Validation.md
+++ b/docs/document/LEVEL 2 INTERMEDIATE/Fase 7.75 Data Validation & Error Handling/7.11 Input Validation.md
@@ -1,27 +1,259 @@
-# Input Validation
+## **7.10 Input Validation** (2 hari) ⭐⭐⭐
 
-## Deskripsi
-Validasi input adalah langkah penting untuk menjaga integritas data dalam aplikasi. Anda akan belajar berbagai teknik validasi form dan pattern regex dalam aplikasi Android.
+### **Teknologi Modern:**
+- Form validation
+- Regex patterns
+- Custom validators
+- Material Design error states
 
-## Tujuan Pembelajaran
-- Mengimplementasikan form validation
-- Menggunakan regex patterns untuk validasi
-- Memastikan data integrity sejak input awal
+### **Teknologi yang Ditinggalkan:**
+- No validation (langsung submit)
+- Manual string checks
+- Toast-only feedback
 
-## Materi
-- Form validation techniques
-- Regex patterns untuk validasi yang umum
-- Validasi di sisi client
-- Error messages yang informatif
-- Validasi untuk email, password, dll.
-- No validation approach
-- Data integrity assurance
+### **Sub-topik Detail:**
 
-## Waktu
-2 hari
+#### **1. Form Validation Basics**
+- TextInputLayout dengan error
+- Real-time validation
+- Focus change validation
+- Submit validation
+- Error message guidelines
+- Accessibility considerations
 
-## Prioritas
-⭐⭐⭐ (Data integrity)
+#### **2. Input Types & Patterns**
 
-## Catatan
-Validasi input yang baik mencegah data tidak valid masuk ke sistem aplikasi.
+**Email Validation:**
+```kotlin
+fun isValidEmail(email: String): Boolean {
+    return android.util.Patterns.EMAIL_ADDRESS.matcher(email).matches()
+}
+
+// With TextInputLayout
+textInputLayout.error = if (!isValidEmail(email)) {
+    "Email tidak valid"
+} else null
+```
+
+**Phone Number Validation:**
+```kotlin
+fun isValidPhoneNumber(phone: String): Boolean {
+    val pattern = "^(\\+62|62|0)[0-9]{9,12}$".toRegex()
+    return pattern.matches(phone)
+}
+```
+
+**Password Strength:**
+```kotlin
+sealed class PasswordStrength {
+    object Weak : PasswordStrength()
+    object Medium : PasswordStrength()
+    object Strong : PasswordStrength()
+}
+
+fun checkPasswordStrength(password: String): PasswordStrength {
+    val hasMinLength = password.length >= 8
+    val hasUpperCase = password.any { it.isUpperCase() }
+    val hasLowerCase = password.any { it.isLowerCase() }
+    val hasDigit = password.any { it.isDigit() }
+    val hasSpecial = password.any { !it.isLetterOrDigit() }
+    
+    val score = listOf(hasMinLength, hasUpperCase, hasLowerCase, hasDigit, hasSpecial)
+        .count { it }
+    
+    return when {
+        score <= 2 -> PasswordStrength.Weak
+        score <= 4 -> PasswordStrength.Medium
+        else -> PasswordStrength.Strong
+    }
+}
+```
+
+**Custom Regex Patterns:**
+```kotlin
+object ValidationPatterns {
+    val USERNAME = "^[a-zA-Z0-9._]{3,20}$".toRegex()
+    val URL = "^(https?://)?(www\\.)?[-a-zA-Z0-9@:%._+~#=]{1,256}\\.[a-zA-Z0-9()]{1,6}\\b([-a-zA-Z0-9()@:%_+.~#?&/=]*)$".toRegex()
+    val NUMERIC = "^[0-9]+$".toRegex()
+    val ALPHABETIC = "^[a-zA-Z\\s]+$".toRegex()
+}
+```
+
+#### **3. Real-time Validation**
+
+**TextWatcher Implementation:**
+```kotlin
+editText.addTextChangedListener(object : TextWatcher {
+    override fun beforeTextChanged(s: CharSequence?, start: Int, count: Int, after: Int) {}
+    
+    override fun onTextChanged(s: CharSequence?, start: Int, before: Int, count: Int) {
+        validateInput(s.toString())
+    }
+    
+    override fun afterTextChanged(s: Editable?) {}
+})
+
+private fun validateInput(input: String) {
+    textInputLayout.error = when {
+        input.isEmpty() -> "Field tidak boleh kosong"
+        input.length < 3 -> "Minimal 3 karakter"
+        !ValidationPatterns.USERNAME.matches(input) -> "Format tidak valid"
+        else -> null
+    }
+}
+```
+
+**Flow-based Validation:**
+```kotlin
+class LoginViewModel : ViewModel() {
+    val email = MutableStateFlow("")
+    val password = MutableStateFlow("")
+    
+    val isEmailValid = email.map { isValidEmail(it) }
+        .stateIn(viewModelScope, SharingStarted.Lazily, false)
+    
+    val isPasswordValid = password.map { it.length >= 8 }
+        .stateIn(viewModelScope, SharingStarted.Lazily, false)
+    
+    val isFormValid = combine(isEmailValid, isPasswordValid) { email, password ->
+        email && password
+    }.stateIn(viewModelScope, SharingStarted.Lazily, false)
+}
+```
+
+#### **4. Custom Validators**
+
+**Validator Interface:**
+```kotlin
+interface Validator<T> {
+    fun validate(input: T): ValidationResult
+}
+
+sealed class ValidationResult {
+    object Valid : ValidationResult()
+    data class Invalid(val message: String) : ValidationResult()
+}
+
+class EmailValidator : Validator<String> {
+    override fun validate(input: String): ValidationResult {
+        return if (isValidEmail(input)) {
+            ValidationResult.Valid
+        } else {
+            ValidationResult.Invalid("Email tidak valid")
+        }
+    }
+}
+```
+
+**Composite Validators:**
+```kotlin
+class CompositeValidator<T>(
+    private val validators: List<Validator<T>>
+) : Validator<T> {
+    override fun validate(input: T): ValidationResult {
+        validators.forEach { validator ->
+            val result = validator.validate(input)
+            if (result is ValidationResult.Invalid) {
+                return result
+            }
+        }
+        return ValidationResult.Valid
+    }
+}
+
+// Usage
+val passwordValidator = CompositeValidator(
+    listOf(
+        MinLengthValidator(8),
+        UpperCaseValidator(),
+        DigitValidator(),
+        SpecialCharValidator()
+    )
+)
+```
+
+#### **5. Form State Management**
+
+**Form State:**
+```kotlin
+data class FormState(
+    val email: String = "",
+    val password: String = "",
+    val emailError: String? = null,
+    val passwordError: String? = null,
+    val isLoading: Boolean = false
+) {
+    val isValid: Boolean
+        get() = email.isNotEmpty() && 
+                password.isNotEmpty() && 
+                emailError == null && 
+                passwordError == null
+}
+
+class FormViewModel : ViewModel() {
+    private val _formState = MutableStateFlow(FormState())
+    val formState = _formState.asStateFlow()
+    
+    fun updateEmail(email: String) {
+        _formState.update { it.copy(
+            email = email,
+            emailError = if (isValidEmail(email)) null else "Email tidak valid"
+        )}
+    }
+    
+    fun submit() {
+        if (formState.value.isValid) {
+            // Submit form
+        }
+    }
+}
+```
+
+#### **6. Material Design Error States**
+
+**TextInputLayout Error:**
+```xml
+<com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/emailInputLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:errorEnabled="true"
+    app:helperText="contoh@email.com"
+    app:helperTextEnabled="true">
+    
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/emailEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        android:inputType="textEmailAddress"/>
+        
+</com.google.android.material.textfield.TextInputLayout>
+```
+
+**Dynamic Error Display:**
+```kotlin
+fun TextInputLayout.showError(message: String?) {
+    error = message
+    isErrorEnabled = message != null
+}
+
+// Usage
+emailInputLayout.showError(
+    if (email.isEmpty()) "Email wajib diisi"
+    else if (!isValidEmail(email)) "Format email salah"
+    else null
+)
+```
+
+#### **7. Best Practices**
+✅ Validate on blur (focus change), bukan setiap keystroke
+✅ Show specific error messages
+✅ Disable submit button jika form invalid
+✅ Clear errors saat user mulai mengetik
+✅ Use accessibility labels
+✅ Provide helper text untuk format yang kompleks
+✅ Validate di client dan server
+✅ Handle edge cases (spaces, special chars)
+
+---
