--- a/docs/document/LEVEL 2 INTERMEDIATE/Fase 7.75 Data Validation & Error Handling/7.12 Error States.md
+++ b/docs/document/LEVEL 2 INTERMEDIATE/Fase 7.75 Data Validation & Error Handling/7.12 Error States.md
@@ -1,27 +1,357 @@
-# Error States
+## **7.11 Error States** (3 hari) ⭐⭐⭐
 
-## Deskripsi
-Manajemen error states sangat penting untuk pengalaman pengguna yang baik. Anda akan belajar bagaimana menampilkan state loading, error, success, dan empty dengan benar.
+### **Teknologi Modern:**
+- Sealed classes untuk states
+- Loading/Error/Success/Empty states
+- Error boundaries
+- Retry mechanisms
 
-## Tujuan Pembelajaran
-- Menangani loading states
-- Menampilkan error states dengan baik
-- Mengelola success dan empty states
+### **Teknologi yang Ditinggalkan:**
+- Boolean flags (isLoading, isError)
+- Null untuk represent errors
+- No error handling
 
-## Materi
-- Loading states (progress indicator)
-- Error states (pesan error, retry mechanism)
-- Success states (notifikasi keberhasilan)
-- Empty states (pesan ketika tidak ada data)
-- UI patterns untuk error handling
-- No error handling approach
-- Better UX melalui state management
+### **Sub-topik Detail:**
 
-## Waktu
-3 hari
+#### **1. UI State Pattern**
 
-## Prioritas
-⭐⭐⭐ (Better UX)
+**Sealed Class State:**
+```kotlin
+sealed class UiState<out T> {
+    object Loading : UiState<Nothing>()
+    data class Success<T>(val data: T) : UiState<T>()
+    data class Error(val exception: Throwable) : UiState<Nothing>()
+    object Empty : UiState<Nothing>()
+}
 
-## Catatan
-Error states yang baik meningkatkan pengalaman pengguna dan transparansi sistem.
+// Dengan message
+sealed class UiState<out T> {
+    object Loading : UiState<Nothing>()
+    data class Success<T>(val data: T) : UiState<T>()
+    data class Error(
+        val message: String,
+        val exception: Throwable? = null,
+        val retry: (() -> Unit)? = null
+    ) : UiState<Nothing>()
+    object Empty : UiState<Nothing>()
+}
+```
+
+**Resource Pattern:**
+```kotlin
+sealed class Resource<out T> {
+    data class Success<T>(val data: T) : Resource<T>()
+    data class Error(
+        val message: String,
+        val code: Int? = null,
+        val throwable: Throwable? = null
+    ) : Resource<Nothing>()
+    object Loading : Resource<Nothing>()
+}
+```
+
+#### **2. Loading State**
+
+**Loading UI:**
+```kotlin
+@Composable
+fun LoadingScreen() {
+    Box(
+        modifier = Modifier.fillMaxSize(),
+        contentAlignment = Alignment.Center
+    ) {
+        Column(horizontalAlignment = Alignment.CenterHorizontally) {
+            CircularProgressIndicator()
+            Spacer(modifier = Modifier.height(16.dp))
+            Text("Memuat data...")
+        }
+    }
+}
+```
+
+**Loading with Content:**
+```kotlin
+@Composable
+fun ContentWithLoading(
+    isLoading: Boolean,
+    content: @Composable () -> Unit
+) {
+    Box(modifier = Modifier.fillMaxSize()) {
+        content()
+        if (isLoading) {
+            CircularProgressIndicator(
+                modifier = Modifier.align(Alignment.Center)
+            )
+        }
+    }
+}
+```
+
+**Shimmer Effect:**
+```kotlin
+@Composable
+fun ShimmerEffect() {
+    val shimmerColors = listOf(
+        Color.LightGray.copy(alpha = 0.6f),
+        Color.LightGray.copy(alpha = 0.2f),
+        Color.LightGray.copy(alpha = 0.6f)
+    )
+    
+    Column {
+        repeat(5) {
+            Box(
+                modifier = Modifier
+                    .fillMaxWidth()
+                    .height(100.dp)
+                    .padding(8.dp)
+                    .background(brush = shimmerBrush(shimmerColors))
+            )
+        }
+    }
+}
+```
+
+#### **3. Error State**
+
+**Error Screen:**
+```kotlin
+@Composable
+fun ErrorScreen(
+    message: String,
+    onRetry: () -> Unit
+) {
+    Box(
+        modifier = Modifier.fillMaxSize(),
+        contentAlignment = Alignment.Center
+    ) {
+        Column(
+            horizontalAlignment = Alignment.CenterHorizontally,
+            modifier = Modifier.padding(16.dp)
+        ) {
+            Icon(
+                imageVector = Icons.Default.Error,
+                contentDescription = null,
+                modifier = Modifier.size(64.dp),
+                tint = Color.Red
+            )
+            Spacer(modifier = Modifier.height(16.dp))
+            Text(
+                text = message,
+                style = MaterialTheme.typography.bodyLarge,
+                textAlign = TextAlign.Center
+            )
+            Spacer(modifier = Modifier.height(16.dp))
+            Button(onClick = onRetry) {
+                Text("Coba Lagi")
+            }
+        }
+    }
+}
+```
+
+**Error Types:**
+```kotlin
+sealed class ErrorType {
+    object Network : ErrorType()
+    object Server : ErrorType()
+    object Unknown : ErrorType()
+    data class Custom(val message: String) : ErrorType()
+}
+
+fun ErrorType.toMessage(): String = when (this) {
+    is ErrorType.Network -> "Tidak ada koneksi internet"
+    is ErrorType.Server -> "Terjadi kesalahan pada server"
+    is ErrorType.Unknown -> "Terjadi kesalahan"
+    is ErrorType.Custom -> message
+}
+```
+
+#### **4. Empty State**
+
+**Empty Screen:**
+```kotlin
+@Composable
+fun EmptyScreen(
+    message: String,
+    actionText: String? = null,
+    onAction: (() -> Unit)? = null
+) {
+    Box(
+        modifier = Modifier.fillMaxSize(),
+        contentAlignment = Alignment.Center
+    ) {
+        Column(
+            horizontalAlignment = Alignment.CenterHorizontally,
+            modifier = Modifier.padding(16.dp)
+        ) {
+            Icon(
+                imageVector = Icons.Default.Info,
+                contentDescription = null,
+                modifier = Modifier.size(64.dp),
+                tint = Color.Gray
+            )
+            Spacer(modifier = Modifier.height(16.dp))
+            Text(
+                text = message,
+                style = MaterialTheme.typography.bodyLarge,
+                textAlign = TextAlign.Center,
+                color = Color.Gray
+            )
+            if (actionText != null && onAction != null) {
+                Spacer(modifier = Modifier.height(16.dp))
+                Button(onClick = onAction) {
+                    Text(actionText)
+                }
+            }
+        }
+    }
+}
+```
+
+#### **5. State Management in ViewModel**
+
+**Complete Example:**
+```kotlin
+class NewsViewModel(
+    private val repository: NewsRepository
+) : ViewModel() {
+    
+    private val _uiState = MutableStateFlow<UiState<List<Article>>>(UiState.Loading)
+    val uiState = _uiState.asStateFlow()
+    
+    init {
+        loadNews()
+    }
+    
+    fun loadNews() {
+        viewModelScope.launch {
+            _uiState.value = UiState.Loading
+            
+            try {
+                val articles = repository.getNews()
+                _uiState.value = if (articles.isEmpty()) {
+                    UiState.Empty
+                } else {
+                    UiState.Success(articles)
+                }
+            } catch (e: IOException) {
+                _uiState.value = UiState.Error(
+                    message = "Tidak ada koneksi internet",
+                    exception = e,
+                    retry = ::loadNews
+                )
+            } catch (e: HttpException) {
+                _uiState.value = UiState.Error(
+                    message = "Terjadi kesalahan pada server",
+                    exception = e,
+                    retry = ::loadNews
+                )
+            } catch (e: Exception) {
+                _uiState.value = UiState.Error(
+                    message = "Terjadi kesalahan: ${e.message}",
+                    exception = e,
+                    retry = ::loadNews
+                )
+            }
+        }
+    }
+}
+```
+
+#### **6. UI Implementation**
+
+**Compose:**
+```kotlin
+@Composable
+fun NewsScreen(viewModel: NewsViewModel = hiltViewModel()) {
+    val uiState by viewModel.uiState.collectAsState()
+    
+    when (val state = uiState) {
+        is UiState.Loading -> LoadingScreen()
+        is UiState.Success -> NewsList(articles = state.data)
+        is UiState.Error -> ErrorScreen(
+            message = state.message,
+            onRetry = state.retry ?: {}
+        )
+        is UiState.Empty -> EmptyScreen(
+            message = "Tidak ada berita",
+            actionText = "Refresh",
+            onAction = { viewModel.loadNews() }
+        )
+    }
+}
+```
+
+**XML Views:**
+```kotlin
+class NewsFragment : Fragment() {
+    private val viewModel: NewsViewModel by viewModels()
+    
+    override fun onViewCreated(view: View, savedInstanceState: Bundle?) {
+        super.onViewCreated(view, savedInstanceState)
+        
+        viewLifecycleOwner.lifecycleScope.launch {
+            viewModel.uiState.collect { state ->
+                when (state) {
+                    is UiState.Loading -> showLoading()
+                    is UiState.Success -> showContent(state.data)
+                    is UiState.Error -> showError(state.message, state.retry)
+                    is UiState.Empty -> showEmpty()
+                }
+            }
+        }
+    }
+    
+    private fun showLoading() {
+        binding.progressBar.isVisible = true
+        binding.recyclerView.isVisible = false
+        binding.errorView.isVisible = false
+        binding.emptyView.isVisible = false
+    }
+    
+    private fun showContent(data: List<Article>) {
+        binding.progressBar.isVisible = false
+        binding.recyclerView.isVisible = true
+        binding.errorView.isVisible = false
+        binding.emptyView.isVisible = false
+        adapter.submitList(data)
+    }
+}
+```
+
+#### **7. Retry Mechanism**
+
+**Exponential Backoff:**
+```kotlin
+suspend fun <T> retryWithExponentialBackoff(
+    times: Int = 3,
+    initialDelay: Long = 1000,
+    maxDelay: Long = 10000,
+    factor: Double = 2.0,
+    block: suspend () -> T
+): T {
+    var currentDelay = initialDelay
+    repeat(times - 1) { attempt ->
+        try {
+            return block()
+        } catch (e: Exception) {
+            Log.w("Retry", "Attempt ${attempt + 1} failed", e)
+            delay(currentDelay)
+            currentDelay = (currentDelay * factor).toLong().coerceAtMost(maxDelay)
+        }
+    }
+    return block() // Last attempt throws if failed
+}
+```
+
+#### **8. Best Practices**
+✅ Always handle all possible states
+✅ Provide retry functionality
+✅ Show meaningful error messages
+✅ Use skeleton/shimmer untuk better UX
+✅ Handle empty states gracefully
+✅ Log errors untuk debugging
+✅ Test all state transitions
+✅ Consider offline mode
+
+---
