--- a/docs/document/LEVEL 2 INTERMEDIATE/Fase 7.75 Data Validation & Error Handling/7.14 Crash Handling.md
+++ b/docs/document/LEVEL 2 INTERMEDIATE/Fase 7.75 Data Validation & Error Handling/7.14 Crash Handling.md
@@ -1,27 +1,297 @@
-# Crash Handling
+## **7.13 Crash Handling** (2 hari) ⭐⭐
 
-## Deskripsi
-Penanganan crash adalah kritis untuk stabilitas aplikasi. Anda akan belajar bagaimana mengimplementasikan global exception handler dan mencegah crashes yang tidak tertangani.
-
-## Tujuan Pembelajaran
-- Mengimplementasikan global exception handler
-- Menggunakan Thread.setDefaultUncaughtExceptionHandler
-- Mencegah unhandled crashes
-
-## Materi
+### **Teknologi Modern:**
 - Global exception handler
 - Thread.setDefaultUncaughtExceptionHandler
-- Crash reporting setup
-- Recovery mechanism
-- Error logging saat crash
-- Unhandled crashes handling
-- Production stability melalui crash handling
+- Firebase Crashlytics
+- Custom crash screens
 
-## Waktu
-2 hari
+### **Teknologi yang Ditinggalkan:**
+- Unhandled crashes
+- No crash reporting
+- Generic Android crash dialog
 
-## Prioritas
-⭐⭐⭐ (Production stability)
+### **Sub-topik Detail:**
 
-## Catatan
-Crash handling yang baik mencegah aplikasi dari force close dan memperbaiki pengalaman pengguna.
+#### **1. Global Exception Handler**
+
+**Setup:**
+```kotlin
+class MyApp : Application() {
+    override fun onCreate() {
+        super.onCreate()
+        
+        Thread.setDefaultUncaughtExceptionHandler { thread, throwable ->
+            handleUncaughtException(thread, throwable)
+        }
+    }
+    
+    private fun handleUncaughtException(thread: Thread, throwable: Throwable) {
+        // Log to Crashlytics
+        FirebaseCrashlytics.getInstance().recordException(throwable)
+        
+        // Log locally
+        Timber.e(throwable, "Uncaught exception on thread ${thread.name}")
+        
+        // Show error activity
+        val intent = Intent(this, CrashActivity::class.java).apply {
+            putExtra("error", throwable.toString())
+            addFlags(Intent.FLAG_ACTIVITY_NEW_TASK or Intent.FLAG_ACTIVITY_CLEAR_TASK)
+        }
+        startActivity(intent)
+        
+        // Kill app
+        Process.killProcess(Process.myPid())
+        exitProcess(1)
+    }
+}
+```
+
+**Crash Activity:**
+```kotlin
+class CrashActivity : ComponentActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        
+        val errorMessage = intent.getStringExtra("error") ?: "Unknown error"
+        
+        setContent {
+            CrashScreen(
+                errorMessage = errorMessage,
+                onRestart = {
+                    val intent = Intent(this, MainActivity::class.java)
+                    intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK or Intent.FLAG_ACTIVITY_CLEAR_TASK)
+                    startActivity(intent)
+                    finish()
+                },
+                onReport = {
+                    // Send report via email
+                    sendErrorReport(errorMessage)
+                }
+            )
+        }
+    }
+}
+
+@Composable
+fun CrashScreen(
+    errorMessage: String,
+    onRestart: () -> Unit,
+    onReport: () -> Unit
+) {
+    Scaffold { padding ->
+        Column(
+            modifier = Modifier
+                .fillMaxSize()
+                .padding(padding)
+                .padding(16.dp),
+            horizontalAlignment = Alignment.CenterHorizontally,
+            verticalArrangement = Arrangement.Center
+        ) {
+            Icon(
+                imageVector = Icons.Default.Error,
+                contentDescription = null,
+                modifier = Modifier.size(64.dp),
+                tint = Color.Red
+            )
+            
+            Spacer(modifier = Modifier.height(16.dp))
+            
+            Text(
+                text = "Oops! Terjadi Kesalahan",
+                style = MaterialTheme.typography.headlineMedium
+            )
+            
+            Spacer(modifier = Modifier.height(8.dp))
+            
+            Text(
+                text = "Aplikasi mengalami crash. Maaf atas ketidaknyamanannya.",
+                style = MaterialTheme.typography.bodyMedium,
+                textAlign = TextAlign.Center
+            )
+            
+            Spacer(modifier = Modifier.height(24.dp))
+            
+            Button(
+                onClick = onRestart,
+                modifier = Modifier.fillMaxWidth()
+            ) {
+                Text("Restart Aplikasi")
+            }
+            
+            Spacer(modifier = Modifier.height(8.dp))
+            
+            OutlinedButton(
+                onClick = onReport,
+                modifier = Modifier.fillMaxWidth()
+            ) {
+                Text("Laporkan Masalah")
+            }
+            
+            if (BuildConfig.DEBUG) {
+                Spacer(modifier = Modifier.height(16.dp))
+                
+                Text(
+                    text = errorMessage,
+                    style = MaterialTheme.typography.bodySmall,
+                    modifier = Modifier
+                        .fillMaxWidth()
+                        .background(Color.LightGray)
+                        .padding
+
+(8.dp)
+                )
+            }
+        }
+    }
+}
+```
+
+#### **2. Thread Exception Handling**
+
+**Coroutine Exception Handler:**
+```kotlin
+val coroutineExceptionHandler = CoroutineExceptionHandler { _, exception ->
+    Timber.e(exception, "Coroutine exception")
+    FirebaseCrashlytics.getInstance().recordException(exception)
+    // Show error UI
+}
+
+val scope = CoroutineScope(
+    Dispatchers.Main + 
+    SupervisorJob() + 
+    coroutineExceptionHandler
+)
+```
+
+**RxJava Error Handler:**
+```kotlin
+RxJavaPlugins.setErrorHandler { throwable ->
+    Timber.e(throwable, "RxJava unhandled error")
+    FirebaseCrashlytics.getInstance().recordException(throwable)
+}
+```
+
+#### **3. Firebase Crashlytics Advanced**
+
+**Custom Keys:**
+```kotlin
+fun trackUserSession(userId: String, userType: String) {
+    val crashlytics = FirebaseCrashlytics.getInstance()
+    
+    crashlytics.setUserId(userId)
+    crashlytics.setCustomKey("user_type", userType)
+    crashlytics.setCustomKey("session_start", System.currentTimeMillis())
+}
+```
+
+**Breadcrumbs:**
+```kotlin
+fun logUserAction(action: String) {
+    FirebaseCrashlytics.getInstance().log("User action: $action")
+}
+
+// Usage
+logUserAction("Clicked checkout button")
+logUserAction("Entered payment screen")
+// If crash happens, these logs will be included
+```
+
+**Non-Fatal Exceptions:**
+```kotlin
+try {
+    riskyOperation()
+} catch (e: Exception) {
+    // Log but don't crash
+    FirebaseCrashlytics.getInstance().recordException(e)
+    // Show error to user
+}
+```
+
+**Force Crash (for testing):**
+```kotlin
+if (BuildConfig.DEBUG) {
+    Button(onClick = {
+        throw RuntimeException("Test Crash")
+    }) {
+        Text("Test Crash")
+    }
+}
+```
+
+#### **4. Crash Report Generation**
+
+**Error Report:**
+```kotlin
+data class CrashReport(
+    val timestamp: Long,
+    val error: String,
+    val stackTrace: String,
+    val deviceInfo: DeviceInfo,
+    val appInfo: AppInfo
+)
+
+data class DeviceInfo(
+    val manufacturer: String,
+    val model: String,
+    val androidVersion: String,
+    val sdkVersion: Int
+)
+
+data class AppInfo(
+    val versionName: String,
+    val versionCode: Int,
+    val buildType: String
+)
+
+fun generateCrashReport(throwable: Throwable): CrashReport {
+    return CrashReport(
+        timestamp = System.currentTimeMillis(),
+        error = throwable.message ?: "Unknown error",
+        stackTrace = throwable.stackTraceToString(),
+        deviceInfo = DeviceInfo(
+            manufacturer = Build.MANUFACTURER,
+            model = Build.MODEL,
+            androidVersion = Build.VERSION.RELEASE,
+            sdkVersion = Build.VERSION.SDK_INT
+        ),
+        appInfo = AppInfo(
+            versionName = BuildConfig.VERSION_NAME,
+            versionCode = BuildConfig.VERSION_CODE,
+            buildType = BuildConfig.BUILD_TYPE
+        )
+    )
+}
+```
+
+**Send Report via Email:**
+```kotlin
+fun sendErrorReport(errorMessage: String) {
+    val intent = Intent(Intent.ACTION_SEND).apply {
+        type = "message/rfc822"
+        putExtra(Intent.EXTRA_EMAIL, arrayOf("support@example.com"))
+        putExtra(Intent.EXTRA_SUBJECT, "App Crash Report")
+        putExtra(Intent.EXTRA_TEXT, """
+            Error: $errorMessage
+            
+            Device: ${Build.MANUFACTURER} ${Build.MODEL}
+            Android: ${Build.VERSION.RELEASE}
+            App Version: ${BuildConfig.VERSION_NAME}
+        """.trimIndent())
+    }
+    
+    startActivity(Intent.createChooser(intent, "Send crash report"))
+}
+```
+
+#### **5. Best Practices**
+✅ Always set up global exception handler
+✅ Send crashes to analytics (Firebase Crashlytics)
+✅ Never expose stack traces to users di production
+✅ Provide restart option after crash
+✅ Log device and app info
+✅ Test crash reporting
+✅ Handle ANRs (Application Not Responding)
+✅ Provide way to report bugs
+
+---
